fix navbar scroll's visibility issue during transition

--- a/babaei.net/static/css/custom.css
+++ b/babaei.net/static/css/custom.css
@@ -70,8 +70,12 @@
     }
 
     .navbar-collapse {
-        overflow-x: visible !important;
+        overflow-x: hidden !important;
         -webkit-overflow-scrolling: touch !important;
+    }
+
+    .navbar-collapse.collapse {
+        overflow-x: hidden !important;
     }
 
     .navbar-custom .nav .navlinks-container.show-children {
